rebranding: MarsJustice.co

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">FOR THE FUTURE. FOR KIDS ✊❤️🇺🇸</h2>
+      <h2 class="project-tagline">FOR THE FUTURE. FOR CHILDREN ⚔️❤️🇺🇸</h2>
   
 
       <nav>
@@ -50,8 +50,8 @@
       {{ content }}
 
       <footer class="site-footer">
-        <div class="site-footer-credits">Read <a href="https://royallawx.blog">Blog</a>.</div>
-        <div class="site-footer-credits">Subscribe to <a href="https://www.youtube.com/@RoyalLawX">YouTube</a>.</div>
+        <div class="site-footer-credits">Read <a href="https://MarsJustice.blog">Blog</a>.</div>
+        <div class="site-footer-credits">Subscribe to <a href="https://www.youtube.com/@MarsJusticeX">YouTube</a>.</div>
       </footer>
     </main>
     <script defer src="{{ '/assets/js/cursor.js' | relative_url }}"></script>
